--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Foundatio",
         "Kubernetes",
         "Minio",
+        "OWIN",
         "Serilog",
         "Varorbc",
         "edwardmeng",
