--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-rss": "^1.0.9"
+    "@11ty/eleventy-plugin-rss": "^1.0.9",
+    "eleventy-plugin-embed-everything": "^1.9.3"
   },
   "dependencies": {}
 }
