--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "eleventy-plugin-embed-everything": "^1.9.3"
-  },
-  "dependencies": {}
+    "eleventy-plugin-embed-everything": "^1.9.3",
+    "eleventy-plugin-seo": "^0.5.1"
+  }
 }
