Cleaning up markdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,12 @@
         "Foundatio",
         "Geocode",
         "Gmail",
+        "Kibana",
         "Kubernetes",
         "Lucene",
         "Minio",
         "OWIN",
+        "Reindex",
         "Reindexing",
         "Serilog",
         "Varorbc",
