--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-replace-link": "^1.1.0"
+  },
+  "dependencies": {
+    "commander": "^6.1.0"
   }
 }
