--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "markdown-it-replace-link": "^1.1.0"
   },
   "dependencies": {
+    "@quasibit/eleventy-plugin-sitemap": "^2.0.3",
     "commander": "^6.1.0"
   }
 }
