Fixed docs and wiki links & spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,13 +13,20 @@
         "Reindex",
         "Reindexing",
         "Serilog",
+        "Trello",
         "Varorbc",
         "Zurb",
         "Zurb's",
+        "adamsitnik",
+        "caesay",
         "deduplicated",
         "edwardmeng",
+        "eleventy",
         "exceptionless",
+        "frankebersoll",
+        "pluggable",
         "serializers",
+        "srijken",
         "typeof",
         "walkthrough"
     ]
