--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "eleventy",
         "exceptionless",
         "frankebersoll",
+        "kubectl",
         "pluggable",
         "serializers",
         "srijken",
