Some small fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "adamsitnik",
         "caesay",
         "deduplicated",
+        "deduplicating",
         "edwardmeng",
         "eleventy",
         "exceptionless",
