--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "commander": "^6.2.0",
     "eleventy-plugin-embed-everything": "^1.9.4",
     "eleventy-plugin-seo": "^0.5.1",
+    "glob": "^7.1.6",
+    "lodash.truncate": "^4.4.2",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-alerts": "^0.1.0",
     "markdown-it-anchor": "^6.0.1",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-footnote": "^3.0.2",
-    "markdown-it-replace-link": "^1.1.0"
+    "markdown-it-replace-link": "^1.1.0",
+    "moment": "^2.29.1",
+    "yaml-front-matter": "^4.1.0"
   },
   "dependencies": {
-    "@quasibit/eleventy-plugin-sitemap": "^2.0.3",
-    "commander": "^6.2.0",
-    "glob": "^7.1.6",
-    "markdown-to-json": "^0.5.4"
+    "@quasibit/eleventy-plugin-sitemap": "^2.0.3"
   }
 }
