--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Exceptionless website",
   "main": "index.js",
   "scripts": {
-    "clean": "npx del-cli --force ./_site",
+    "clean": "rmdir-cli ./_site",
     "generate": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve",
-    "build": "npx npm-run-all clean generate",
-    "dev": "npx npm-run-all clean serve",
+    "build": "npm-run-all clean generate",
+    "dev": "npm-run-all clean serve",
     "new-post": "node new_post.js -t"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "@quasibit/eleventy-plugin-sitemap": "^2.0.3",
     "commander": "^6.2.0",
     "eleventy-plugin-embed-everything": "^1.9.4",
     "eleventy-plugin-seo": "^0.5.1",
@@ -32,9 +33,8 @@
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-replace-link": "^1.1.0",
     "moment": "^2.29.1",
+    "npm-run-all": "^4.1.5",
+    "rmdir-cli": "^2.0.6",
     "yaml-front-matter": "^4.1.0"
-  },
-  "dependencies": {
-    "@quasibit/eleventy-plugin-sitemap": "^2.0.3"
   }
 }
