--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Exceptionless website",
   "main": "index.js",
   "scripts": {
-    "clean": "rmdir-cli ./_site",
+    "clean": "npx rimraf _site",
     "generate": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve",
     "build": "npm-run-all clean generate",
@@ -34,7 +34,7 @@
     "markdown-it-replace-link": "^1.1.0",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
-    "rmdir-cli": "^2.0.6",
+    "rimraf": "^3.0.2",
     "yaml-front-matter": "^4.1.0"
   }
 }
