Updated docs for the new js client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Zurb",
         "Zurb's",
         "adamsitnik",
+        "angularjs",
         "caesay",
         "deduplicated",
         "deduplicating",
