--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eleventy-plugin-seo": "^0.5.1",
     "glob": "^7.1.7",
     "lodash.truncate": "^4.4.2",
+    "markdown-it": "^12.1.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-alerts": "^0.1.0",
     "markdown-it-anchor": "^8.1.0",
