--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,10 @@
 		{
 			"type": "npm",
 			"script": "build",
-			"group": "build",
+			"group": {
+				"isDefault": true,
+				"kind": "build"
+			},
 			"problemMatcher": [],
 			"label": "npm: build",
 			"detail": "npx @11ty/eleventy"
