--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,21 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
       "request": "launch",
-      "name": "Launch 11ty",
-      "program": "${workspaceFolder}\\node_modules\\@11ty\\eleventy\\cmd.js",
-      "args": [
-        // "--output=C:\\Temp"
-      ]
+      "name": "Lume build",
+      "type": "pwa-node",
+      "program": "${workspaceFolder}/_config.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--import-map=.vscode/lume_import_map.json",
+        "--inspect",
+        "--allow-all"
+      ],
+      "attachSimplePort": 9229
     }
   ]
 }
