--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
   publish = "_site"
   command = """
     curl -fsSL https://deno.land/x/install/install.sh | sh && \
-    export PATH="/opt/buildhome/.deno/bin:$PATH" \
-    deno run -A https://deno.land/x/lume/install.ts \
-    lume upgrade --dev \
+    export PATH="/opt/buildhome/.deno/bin:$PATH" && \
+    deno run -A https://deno.land/x/lume/install.ts && \
+    lume upgrade --dev && \
     lume --location=$DEPLOY_PRIME_URL \
   """
