--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,29 @@
         "--allow-all"
       ],
       "attachSimplePort": 9229
+    },
+    {
+      "request": "launch",
+      "name": "Lume serve",
+      "type": "pwa-node",
+      "program": "file://d:/Projects/Other/lume/cli.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--import-map=.vscode/lume_import_map.json",
+        "--inspect",
+        "--allow-all",
+        "--reload"
+      ],
+      "args": [
+        "--serve"
+      ],
+      "attachSimplePort": 9229
     }
   ]
 }
+
+
+
