Added Exceptionless.JavaScript 3.0.0 Released Blog Post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,37 @@
 {
     "cSpell.words": [
-        "Aliyun",
-        "Burcham",
-        "Foundatio",
-        "Geocode",
-        "Gmail",
-        "Kibana",
-        "Kubernetes",
-        "Lucene",
-        "Minio",
-        "OWIN",
-        "Reindex",
-        "Reindexing",
-        "Serilog",
-        "Trello",
-        "Varorbc",
-        "Zurb",
-        "Zurb's",
         "adamsitnik",
+        "Aliyun",
         "angularjs",
+        "Burcham",
         "caesay",
         "deduplicated",
         "deduplicating",
         "edwardmeng",
         "eleventy",
         "exceptionless",
+        "Foundatio",
         "frankebersoll",
+        "Geocode",
+        "Gmail",
+        "Kibana",
         "kubectl",
+        "Kubernetes",
+        "Lucene",
+        "Minio",
+        "Niemyjski",
+        "OWIN",
         "pluggable",
+        "Reindex",
+        "Reindexing",
         "serializers",
+        "Serilog",
         "srijken",
+        "Trello",
         "typeof",
-        "walkthrough"
+        "Varorbc",
+        "walkthrough",
+        "Zurb",
+        "Zurb's"
     ]
 }
