--- a/package.json
+++ b/package.json
@@ -2,39 +2,49 @@
   "name": "exceptionless-website",
   "version": "1.0.0",
   "description": "Exceptionless website",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "clean": "npx rimraf _site",
-    "generate": "npx @11ty/eleventy",
-    "serve": "npx @11ty/eleventy --serve",
-    "build": "npm-run-all clean generate",
-    "dev": "npm-run-all clean serve",
+    "build": "npx @11ty/eleventy",
+    "build-nocolor": "cross-env NODE_DISABLE_COLORS=1 npx @11ty/eleventy",
+    "start": "npx @11ty/eleventy --serve --quiet",
+    "dev": "npx @11ty/eleventy --serve --quiet",
+    "debug": "cross-env DEBUG=Eleventy* npx @11ty/eleventy",
+    "debugstart": "cross-env DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
+    "benchmark": "cross-env DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
     "new-post": "node new_post.js -t"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-navigation": "^0.3.2",
-    "@11ty/eleventy-plugin-rss": "^1.1.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
-    "@quasibit/eleventy-plugin-sitemap": "^2.1.4",
-    "commander": "^10.0.0",
-    "eleventy-plugin-embed-everything": "^1.13.3",
-    "glob": "^7.1.7",
-    "lodash.truncate": "^4.4.2",
-    "markdown-it": "^12.2.0",
-    "markdown-it-abbr": "^1.0.4",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^6.0.4",
+    "@11ty/eleventy-navigation": "^1.0.4",
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
+    "@quasibit/eleventy-plugin-sitemap": "^2.2.0",
+    "commander": "^12.0.0",
+    "cross-env": "^7.0.3",
+    "eleventy-plugin-embed-everything": "^1.18.2",
+    "glob": "^11.0.0",
+    "luxon": "^3.6.1",
+    "markdown-it": "^14.0.0",
+    "markdown-it-abbr": "^2.0.0",
     "markdown-it-alerts": "^0.1.0",
-    "markdown-it-anchor": "^8.3.0",
-    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-attrs": "^4.2.0",
     "markdown-it-bracketed-spans": "^1.0.1",
-    "markdown-it-footnote": "^3.0.3",
-    "markdown-it-replace-link": "^1.1.0",
-    "moment": "^2.29.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "yaml-front-matter": "^4.1.1"
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-replace-link": "^1.2.1",
+    "prismjs": "^1.30.0",
+    "yaml-front-matter": "^4.1.1",
+    "zod": "^3.25.67",
+    "zod-validation-error": "^3.5.2"
+  },
+  "dependencies": {
+    "@zachleat/heading-anchors": "^1.0.3"
   }
 }
